2003-04-14  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/EncoderBase.cpp, Atlas/EncoderBase.h,
	  Atlas/Message/MEncoder.cpp, Atlas/Message/MEncoder.h,
	  Atlas/Objects/AttributeInfo.py, Atlas/Objects/BaseObject.cpp,
	  Atlas/Objects/BaseObject.h, Atlas/Objects/Encoder.h,
	  Atlas/Objects/gen_cpp.py, Atlas/Utilities/atlas_convert.cpp,
	  tests/Objects/encoder1.cpp, tests/Objects/objects2.cpp:
	  Clean up and de-virtualised encoders for performance.

2003-04-13  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Exception.h, Atlas/Exception.cpp,
	  Atlas/Message/DecoderBase.cpp, Atlas/Message/DecoderBase.h,
	  Atlas/Message/MEncoder.cpp, Atlas/Message/MEncoder.h,
	  Atlas/Net/Stream.cpp, Atlas/Net/Stream.h,
	  Atlas/Objects/BaseObject.cpp, Atlas/Objects/BaseObject.h,
	  Atlas/Objects/Encoder.h, Atlas/Objects/Encoder.cpp,
	  Atlas/Objects/GenerateDecoder.py,
	  Atlas/Objects/GenerateObjectFactory.py,
	  Atlas/Objects/objectFactory.h:
	  Take more virtual functions out of headers.

2003-04-13  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/EncoderBase.h, Atlas/EncoderBase.cpp,
	  Atlas/Objects/gen_cpp.py:
	  Take virtual functions out of headers, as they can't be inlined.

	* Atlas/Codecs/Bach.cpp: Fix some botched headers.

	* Atlas/Message/MEncoder.h: Remove the hack which solved a problem
	  with overloaded methods hiding virtual methods.

	* benchmark/Message_Move.cpp, benchmark/Objects2_Move.cpp,
	  benchmark/Objects3_Move.cpp, benchmark/Objects_Move.cpp,
	  benchmark/SmartPtr_Move.cpp, benchmark/Static_Move.cpp,
	  tests/Objects/decoder1.cpp, tests/Objects/encoder1.cpp,
	  tests/Objects/objects1.cpp, tests/Objects/objects2.cpp:
	  Bring benchmark and tests headers into line.

2003-04-10  Al Riddoch  <alriddoch@zepler.org>

	* Rename src to Atlas for portability

2003-04-10  Al Riddoch  <alriddoch@zepler.org>

	* src/Codec.cpp, src/Codec.h, src/Codec_impl.h,
	  src/Negotiate.h, src/Negotiate.h, src/Codecs/Bach.h,
	  src/Codecs/Packed.h, src/Codecs/XML.h,